remove overflow scroll caused css issue

--- a/components/weather-card/weather-card.module.scss
+++ b/components/weather-card/weather-card.module.scss
@@ -3,7 +3,6 @@
   border: 2px solid black;
   height: 45vh;
   padding: 2rem;
-  overflow: scroll;
   width: 500px;
   justify-content: space-between;
 
